Added webp for all of the pages

--- a/guides/amend.html
+++ b/guides/amend.html
@@ -31,10 +31,16 @@
     <ol>
       <li>Stage all file changes you wish to add to the commit by selecting them and clicking either <i>Stage All</i> or <i>Stage Selected</i></li>
       <li>Select the <i>Terminal</i> button</li>
-      <img class="image" src="../media/amend-1.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/amend-1.webp" />
+        <img src="../media/amend-1.jpg"/>
+      </picture>
       <li>Execute the following command <pre class="prettyprint">git commit --amend</pre></li>
       <li>Update your commit message and save and exit it (In the nano app as shown in the picture below, its Ctrl+O and Ctrl+W)</li>
-      <img class="image" src="../media/amend-2.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/amend-2.webp" />
+        <img src="../media/amend-2.jpg"/>
+      </picture>
       <li>You are done!</li>
     </ol>
     
