--- a/guides/github.html
+++ b/guides/github.html
@@ -36,7 +36,10 @@
     </ul>
     
     <h2><a id="jump-mics"></a>Main Interface and Code Screen</h2>
-    <img class="image" src="../media/ghst/main-1.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/main-1.webp" />
+      <img src="../media/ghst/main-1.png" />
+    </picture>
     <ol>
       <li>Repository Statistics: Total Commits, Branches, Releases and Contributors. Clicking on the thin colored line will provide a list of languages detected in the repository</li>
       <li>A dropbown box to swtich branches and a quick shortcut to create a new PR</li>
@@ -50,7 +53,10 @@
         <li>The file list in the current selected branch as well as the last commit made that modified the file and how long ago that was</li>
     </ol>
     <br>
-    <img class="image" src="../media/ghst/code-1.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/code-1.webp" />
+      <img src="../media/ghst/code-1.png" />
+    </picture>
     <ol>
       <li>Dropdown box to switch branches</li>
       <li>Latest commit made that modified this file</li>
@@ -63,7 +69,10 @@
       <li>Content of file</li>
     </ol>
     <br>
-    <img class="image" src="../media/ghst/code-2.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/code-2.webp" />
+      <img src="../media/ghst/code-2.png" />
+    </picture>
     <ol>
       <li>Preview changes made to the file</li>
       <li>Content of the file where you can edit</li>
@@ -74,7 +83,10 @@
     </ol>
 
     <h2><a id="jump-issue"></a>Issue Screen</h2>
-    <img class="image" src="../media/ghst/issue-1.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/issue-1.webp" />
+      <img src="../media/ghst/issue-1.png" />
+    </picture>
     <ol>
       <li>Button to create a new issue</li>
       <li>Switch between open and closed issues</li>
@@ -82,7 +94,10 @@
       <li>List of all issues</li>
     </ol>
     <br>
-    <img class="image" src="../media/ghst/issue-2.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/issue-2.webp" />
+      <img src="../media/ghst/issue-2.png" />
+    </picture>
     <ol>
       <li>Button to edit title or create a new issue</li>
       <li>Comment and changes made to the issue</li>
@@ -102,7 +117,10 @@
     </ol>
     
     <h2><a id="jump-pr"></a>Pull Requests (PR) Screen</h2>
-    <img class="image" src="../media/ghst/pr-1.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/pr-1.webp" />
+      <img src="../media/ghst/pr-1.png" />
+    </picture>
     <ol>
       <li>Button to create a new pull request</li>
       <li>Switch between open and closed pull requests</li>
@@ -110,7 +128,10 @@
       <li>List of all pull requests</li>
     </ol>
     <br>
-    <img class="image" src="../media/ghst/pr-2.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/pr-2.webp" />
+      <img src="../media/ghst/pr-2.png" />
+    </picture>
     <ol>
       <li>Button to edit PR title</li>
       <li>Tabs to switch pages (left to right): <ul>
@@ -134,14 +155,20 @@
     </ol>
 
     <h2><a id="jump-project"></a>Project Screen (It's like Trello/JIRA)</h2>
-    <img class="image" src="../media/ghst/proj-1.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/proj-1.webp" />
+      <img src="../media/ghst/proj-1.png" />
+    </picture>
     <ol>
       <li>Create new projects</li>
       <li>Filter between open and closed projects</li>
       <li>List of all projects</li>
     </ol>
     <br>
-    <img class="image" src="../media/ghst/proj-2.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/proj-2.webp" />
+      <img src="../media/ghst/proj-2.png" />
+    </picture>
     <ol>
       <li>Add issue cards (or add issue to the specific board)</li>
       <li>Issue Cards</li>
