--- a/guides/gitlab.html
+++ b/guides/gitlab.html
@@ -39,7 +39,10 @@
     </ul>
     
     <h2><a id="jump-mics"></a>Main Interface and Code Screen</h2>
-    <img alt="Main Interface" class="image" src="../media/gitlab/main/main.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/main/main.webp" />
+      <img alt="Main Interface" src="../media/gitlab/main/main.jpg" />
+    </picture>
     <ol>
       <li>Repository Statistics: Licenses, Total Commits, Branches, Tags, Disk Space Used and Contributors. Hovering on the thin colored line below will provide a list of languages detected in the repository</li>
       <li>A dropbown box to swtich branches and a quick shortcut to create a new file/folder/branch/tag/upload file</li>
@@ -59,7 +62,10 @@
       </ul></li>
     </ol>
     <br>
-    <img alt="Code View" class="image" src="../media/gitlab/main/code.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/main/code.webp" />
+      <img alt="Code View" src="../media/gitlab/main/code.jpg" />
+    </picture>
     <ol>
       <li>Dropdown box to switch branches</li>
       <li>Latest commit made that modified this file</li>
@@ -82,7 +88,10 @@
       <li>Content of file</li>
     </ol>
     <br>
-    <img alt="Edit File" class="image" src="../media/gitlab/main/edit.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/main/edit.webp" />
+      <img alt="Edit File" src="../media/gitlab/main/edit.jpg" />
+    </picture>
     <ol>
       <li>Preview changes made to the file</li>
       <li>Content of the file where you can edit</li>
@@ -92,7 +101,10 @@
     </ol>
 
     <h2><a id="jump-issue"></a>Issue Screen</h2>
-    <img alt="Issue List" class="image" src="../media/gitlab/issue/issuelist.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/issue/issuelist.webp" />
+      <img alt="Issue List" src="../media/gitlab/issue/issuelist.jpg" />
+    </picture>
     <ol>
       <li>Button to create a new issue or do bulk modification of existing issues</li>
       <li>Switch between open, closed and all issues</li>
@@ -100,7 +112,10 @@
       <li>List of all issues</li>
     </ol>
     <br>
-    <img alt="Issue Page" class="image" src="../media/gitlab/issue/issue.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/issue/issue.webp" />
+      <img alt="Issue Page" src="../media/gitlab/issue/issue.jpg" />
+    </picture>
     <ol>
       <li>Button to close or create a new issue</li>
       <li>Issue title, description, other related issues and ability to edit the issue (pencil icon)</li>
@@ -118,7 +133,10 @@
       <li>Comments and changes made to this issue</li>
       <li>Box where you can enter comments to the issue as well as close it (if you are the issue creator)</li>
     </ol>
-    <img alt="New Issue" class="image" src="../media/gitlab/issue/new.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/issue/new.webp" />
+      <img alt="New Issue" src="../media/gitlab/issue/new.jpg" />
+    </picture>
     <ol>
       <li>Issue title</li>
       <li>Description of the issue</li>
@@ -133,7 +151,10 @@
     </ol>
     
     <h2><a id="jump-mr"></a>Merge Requests (MR) Screen</h2>
-    <img alt="Merge Request List" class="image" src="../media/gitlab/mr/mrlist.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/mr/mrlist.webp" />
+      <img alt="Merge Request List" src="../media/gitlab/mr/mrlist.jpg" />
+    </picture>
     <ol>
       <li>Button to create a new MR or do bulk modification of MRs</li>
       <li>Switch between open, merged, close or all MRs</li>
@@ -141,7 +162,10 @@
       <li>List of all MRs</li>
     </ol>
     <br>
-    <img alt="Merge Request Page" class="image" src="../media/gitlab/mr/mr.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/mr/mr.webp" />
+      <img alt="Merge Request Page" src="../media/gitlab/mr/mr.jpg" />
+    </picture>
     <ol>
       <li>Button to edit or close the MR</li>
       <li>MR Title, Description and branch it is being merged from and to</li>
@@ -163,7 +187,10 @@
       </ul></li>
       <li>Comment and changes made to the issue as well as the box where you can enter comments to the MR as well as close it (if you are the MR creator)</li>
     </ol>
-    <img alt="New Merge Request" class="image" src="../media/gitlab/mr/new.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/mr/new.webp" />
+      <img alt="New Merge Request" src="../media/gitlab/mr/new.jpg" />
+    </picture>
     <ol>
       <li>Merge Request Title</li>
       <li>Merge Request Description</li>
@@ -179,7 +206,10 @@
     </ol>
 
     <h2><a id="jump-board"></a>Issue Boards Screen (It's like Trello/JIRA)</h2>
-    <img alt="Issue Board" class="image" src="../media/gitlab/board/issueboard.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/board/issueboard.webp" />
+      <img alt="Issue Board" src="../media/gitlab/board/issueboard.jpg" />
+    </picture>
     <ol>
       <li>Add issues to the board/column</li>
       <li>Issue Column to hold the cards</li>
@@ -189,7 +219,10 @@
     <br>
 
     <h2><a id="jump-ci"></a>CI/CD Pipelines</h2>
-    <img alt="Pipeline List" class="image" src="../media/gitlab/cicd/pipelinelist.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/cicd/pipelinelist.webp" />
+      <img alt="Pipeline List" src="../media/gitlab/cicd/pipelinelist.jpg" />
+    </picture>
     <ol>
       <li>Buttons to manually run the pipeline, clear caches or error check gitlab-ci.yml file</li>
       <li>Tabs between the various status of the CI: <ul>
@@ -203,7 +236,10 @@
       <li>List of pipelines</li>
     </ol>
     <br>
-    <img alt="Pipeline/Job List" class="image" src="../media/gitlab/cicd/pipeline.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/cicd/pipeline.webp" />
+      <img alt="Pipeline/Job List" src="../media/gitlab/cicd/pipeline.jpg" />
+    </picture>
     <ol>
       <li>Pipeline Information (Commit Title, number and duration of jobs, tags and current commit number)</li>
       <li>Tabs to switch between screens: <ul>
@@ -214,7 +250,10 @@
       <li>List of all jobs in the pipeline</li>
     </ol>
     <br>
-    <img alt="Job Information" class="image" src="../media/gitlab/cicd/job.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/cicd/job.webp" />
+      <img alt="Job Information" src="../media/gitlab/cicd/job.jpg" />
+    </picture>
     <ol>
       <li>Information regarding the current job</li>
       <li>General pipeline and job information: <ul>
@@ -230,7 +269,10 @@
     <br>
 
     <h2><a id="jump-ide"></a>Web IDE (A <i class="fab fa-gitlab"></i> exclusive!)</h2>
-    <img alt="Web IDE Edit View" class="image" src="../media/gitlab/webide/edit.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/webide/edit.webp" />
+      <img alt="Web IDE Edit View" src="../media/gitlab/webide/edit.jpg" />
+    </picture>
     <ol>
       <li>List of currently opened documents</li>
       <li>Working area for working with files</li>
@@ -239,7 +281,10 @@
       <li>Button to commit changes made as well as statistics of files</li>
     </ol>
     <br>
-    <img alt="Web IDE Review View" class="image" src="../media/gitlab/webide/review.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/webide/review.webp" />
+      <img alt="Web IDE Review View" src="../media/gitlab/webide/review.jpg" />
+    </picture>
     <ol>
       <li>Button to stage or discard changes to this file</li>
       <li>A diff of the file being changed (Left - Old, Right - New)</li>
@@ -249,7 +294,10 @@
       <li>Button to commit changes as well as statistics of files modified/staged/unstaged</li>
     </ol>
     <br>
-    <img alt="Web IDE Commit View" class="image" src="../media/gitlab/webide/commit.jpg" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/gitlab/webide/commit.webp" />
+      <img alt="Web IDE Commit View" src="../media/gitlab/webide/commit.jpg" />
+    </picture>
     <ol>
       <li>A diff of the file being changed (Left - Old, Right - New)</li>
       <li>Commit message for what you are committing to</li>
