--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -27,17 +27,35 @@
     <ol>
         <li>Launch Eclipse and wait for it to load <i>(Setup the workspace and close the Welcome screen if it pops up)</i></li>
         <li>Click on <i>File &gt; Import</i></li>
-        <img class="image" src="../media/eclipse-1.jpg"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/eclipse-1.webp" />
+          <img src="../media/eclipse-1.jpg"/>
+        </picture>
         <li>Select <i>Gradle &gt; Existing Gradle Project</i> and click Next</li>
-        <img class="image" src="../media/eclipse-2.jpg"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/eclipse-2.webp" />
+          <img src="../media/eclipse-2.jpg"/>
+        </picture>
         <li>Enter the root path of the project directory and press Next</li>
-        <img class="image" src="../media/eclipse-3.jpg"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/eclipse-3.webp" />
+          <img src="../media/eclipse-3.jpg"/>
+        </picture>
         <li>Continue spamming Next until you cannot do so, then click Finish</li>
-        <img class="image" src="../media/eclipse-4.jpg"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/eclipse-4.webp" />
+          <img src="../media/eclipse-4.jpg"/>
+        </picture>
         <li>Note: If you receive this error as shown in the picture below, ignore it and press <i>OK</i></li>
-        <img class="image" src="../media/eclipse-5.jpg"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/eclipse-5.webp" />
+          <img src="../media/eclipse-5.jpg"/>
+        </picture>
         <li>The source files can be found in <i>src/main/java</i></li>
-        <img class="image" src="../media/eclipse-6.jpg"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/eclipse-6.webp" />
+          <img src="../media/eclipse-6.jpg"/>
+        </picture>
         <li>To run the program just press the Green Play button in the Toolbar as per normal</li>
     </ol>
     
