--- a/guides/import-intellij.html
+++ b/guides/import-intellij.html
@@ -27,16 +27,31 @@
     <ol>
       <li>Launch IntelliJ IDEA IDE and wait for it to load</li>
       <li>Click the Import button <i>If you do not see the screen in the picture below, ensure that you have closed all project windows with File &gt; Close Project</i></li>
-      <img class="image" src="../media/intellij-1.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/intellij-1.webp" />
+        <img src="../media/intellij-1.jpg"/>
+      </picture>
       <li>Navigate to the project directory and select the <i>build.gradle</i> file before clicking OK</li>
-      <img class="image" src="../media/intellij-2.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/intellij-2.webp" />
+        <img src="../media/intellij-2.jpg"/>
+      </picture>
       <li>Ensure that <i>Use default gradle wrapper</i> is selected and click OK</li>
-      <img class="image" src="../media/intellij-3.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/intellij-3.webp" />
+        <img src="../media/intellij-3.jpg"/>
+      </picture>      
       <li>Wait for IntelliJ to finish building the project</li>
       <li>The source files are located at <i>src &gt; main &gt; java</i></li>
-      <img class="image" src="../media/intellij-4.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/intellij-4.webp" />
+        <img src="../media/intellij-4.jpg"/>
+      </picture>
       <li>To run the project, right click the main source file and select <i>Run</i></li>
-      <img class="image" src="../media/intellij-5.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/intellij-5.webp" />
+        <img src="../media/intellij-5.jpg"/>
+      </picture>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
