--- a/guides/mr.html
+++ b/guides/mr.html
@@ -38,31 +38,52 @@
         <li>Click the <i>Branch</i> button to create a new branch</li>
         <li>Enter your desired branch name <i>(To sort the branch to folders, append / to the branch name)</i></li>
         <li>Click <i>Create Branch</i> to confirm branch creation<br>
-          <img alt="GitLab MR #1" class="image" src="../media/gitlab/guide/mr-1.png"/>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/gitlab/guide/mr-1.webp" />
+            <img alt="GitLab MR #1" src="../media/gitlab/guide/mr-1.png"/>
+          </picture>
         </li>
         <li>Do your necessary code implementation/fixes/changes<br>
         (See <a href="pull.html">Pull from origin</a>, <a href="commit.html">Commit Code</a>, <a href="push.html">Push to origin</a>)</li>
         <li>When it is all done, head over to the repo project page</li>
         <li>You should be able to see your branch name that you just pushed at the top of the page, and select <i>Create merge request</i><br>
-          <img alt="GitLab MR #2" class="image" src="../media/gitlab/guide/mr-2.png"/>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/gitlab/guide/mr-2.webp" />
+            <img alt="GitLab MR #2" src="../media/gitlab/guide/mr-2.png"/>
+          </picture>
         </li>
         <li><i>Note: If it does not show up, manually create the MR by going to the Merge Requests page and select "New merge request", after which select your branch in the "Select source branch" dropdown box</i></li>
         <li>Enter your Merge Request Title and Descriptions accordingly if needed. Also modify the settings at the bottom if you need to do so<br>
-          <img alt="GitLab MR #3" class="image" src="../media/gitlab/guide/mr-3.png"/>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/gitlab/guide/mr-3.webp" />
+            <img alt="GitLab MR #3" src="../media/gitlab/guide/mr-3.png"/>
+          </picture>
         </li>
         <li>Double check that the branch you are merging to is correct and review your changes again</li>
         <li>When you are done, create the MR by clicking the green <i>Submit merge request</i> button<br>
-          <img alt="GitLab MR #4" class="image" src="../media/gitlab/guide/mr-4.png"/>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/gitlab/guide/mr-4.webp" />
+            <img alt="GitLab MR #4" src="../media/gitlab/guide/mr-4.png"/>
+          </picture>
         </li>
         <li>Now we play the waiting game until a green tick appears and it says <i>All checks have passed</i> (Note: If it fails, your code is not compiling and needs to be fixed)</li>
         <li>If all checks have passed, either you or anyone else can go ahead and click the green <i>Merge</i> button<br>
-          <img alt="GitLab MR #5" class="image" src="../media/gitlab/guide/mr-5.png"/>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/gitlab/guide/mr-5.webp" />
+            <img alt="GitLab MR #5" src="../media/gitlab/guide/mr-5.png"/>
+          </picture>
         </li>
         <li>Ensure that it says your merge request has been merged<br>
-          <img alt="GitLab MR #6" class="image" src="../media/gitlab/guide/mr-6.png"/>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/gitlab/guide/mr-6.webp" />
+            <img alt="GitLab MR #6" src="../media/gitlab/guide/mr-6.png"/>
+          </picture>
         </li>
         <li>When you are done you can switch back to the master branch (you may now delete the branch if you want, though its entirely optional)<br>
-          <img alt="GitLab MR #7" class="image" src="../media/gitlab/guide/mr-7.png"/>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/gitlab/guide/mr-7.webp" />
+            <img alt="GitLab MR #7" src="../media/gitlab/guide/mr-7.png"/>
+          </picture>
         </li>
       </ol>
     
