--- a/guides/pull.html
+++ b/guides/pull.html
@@ -31,11 +31,17 @@
       <li>Click the <i>Fetch</i> button to ensure that all changes are fetched</li>
       <li>Ensure that you are at the correct branch you wish to pull changes from</li>
       <li>Click the <i>Pull</i> Button</li>
-      <img class="image" src="../media/pull-1.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/pull-1.webp" />
+        <img src="../media/pull-1.jpg"/>
+      </picture>
       <li>Double check that the remote and local branches match<br>
       <i>(If it doesnt match, select the correct remote branch with the dropdown box)</i></li>
       <li>Press OK to confirm and pull new changes</li>
-      <img class="image" src="../media/pull-2.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/pull-2.webp" />
+        <img src="../media/pull-2.jpg"/>
+      </picture>
     </ol>    
     
     <div id="divvid"><b>Demo Video</b><br>
