--- a/guides/push.html
+++ b/guides/push.html
@@ -30,10 +30,16 @@
     <ol>
       <li>Do all the commits you want (See <a href="commit.html">Add Commits</a>)</li>
       <li>Click the <i>Push</i> button</li>
-      <img class="image" src="../media/push-1.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/push-1.webp" />
+        <img src="../media/push-1.jpg"/>
+      </picture>
       <li>Make sure all branches you wish to push are selected and checked</li>
       <li>Click the <i>Push</i> button</li>
-      <img class="image" src="../media/push-2.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/push-2.webp" />
+        <img src="../media/push-2.jpg"/>
+      </picture>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
