--- a/guides/rebase.html
+++ b/guides/rebase.html
@@ -33,9 +33,15 @@
     <ol>
       <li>Ensure that your parent branch you are rebasing your current branch off is updated (See <a href="pull.html">Update branch</a>)</li>
       <li>Ensure that your branch is selected and click the <i>Terminal</i> button</li>
-      <img class="image" src="../media/rebase-1.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/rebase-1.webp" />
+        <img src="../media/rebase-1.jpg"/>
+      </picture>
       <li>Execute the following command <pre class="prettyprint">git rebase "branch name"</pre>, replacing "branch name" with the name of the branch you are rebasing from (in the case of the picture below, it is the master branch we are rebasing from)</li>
-      <img class="image" src="../media/rebase-2.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/rebase-2.webp" />
+        <img src="../media/rebase-2.jpg"/>
+      </picture>
       <li>If you have no merge conflicts you are done! Otherwise look at <a href="conflict.html">Resolving Merge Conflicts</a> to resolve any conflicted code</li>
     </ol>
     
