--- a/guides/sourcetree.html
+++ b/guides/sourcetree.html
@@ -24,7 +24,10 @@
     <p id="description">This page will give you a brief guide on the SourceTree User Interface. It is color coded to tell you what it's referring to</p>
     
     <h2>Main Interface</h2>
-    <img class="image" src="../media/ghst/sourcetree-1.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/sourcetree-1.webp" />
+      <img src="../media/ghst/sourcetree-1.png" />
+    </picture>
     <ol>
       <li>Top sidebar (see Sidebars)</li>
       <li>Left sidebar (see Sidebars)</li>
@@ -34,14 +37,20 @@
       <li>Commit box: Fill up your commit message, the commit button and a checkbox to auto push commit after committing your changes</li>
     </ol>
     <br>
-    <img class="image" src="../media/ghst/sourcetree-2.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/sourcetree-2.webp" />
+      <img src="../media/ghst/sourcetree-2.png" />
+    </picture>
     <ol>
       <li>History of all commits in the repository</li>
       <li>Staged/Unstaged files list (See first picture)</li>
     </ol>
 
     <h2>Sidebars</h2>
-    <img class="image" src="../media/ghst/sourcetree-3.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/sourcetree-3.webp" />
+      <img src="../media/ghst/sourcetree-3.png" />
+    </picture>
     <ol>
         <li>Button to Push, Pull or Fetch commits respectively</li>
         <li>Branch button to create a new branch</li>
@@ -50,7 +59,10 @@
         <li>Button to access the Git terminal and view your repository in File Explorer respectively</li>
     </ol>
     <br>
-    <img class="image" src="../media/ghst/sourcetree-4.png" />
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ghst/sourcetree-4.webp" />
+      <img src="../media/ghst/sourcetree-4.png" />
+    </picture>
     <ol>
       <li>Branches currently on your local machine for you to switch to</li>
       <li>Branches found on GitHub for you to checkout (download to local machine)</li>
