--- a/guides/template.html
+++ b/guides/template.html
@@ -43,6 +43,13 @@
       <a href="">Click here to view the <i class="fab fa-github"></i> GitHub Version</a>
     </pre>
 
+    <!-- Image Template -->
+    <picture class="image">
+      <source type="image/webp" srcset="../media/ntulogo.webp" />
+      <!-- Image Default src with img tag -->
+      <img alt="Template" src="../media/ntulogo.png" />
+    </picture>
+
     <p id="description">Brief Description</p>
     
     <div id="divvid"><b>Demo Video</b><br>
