--- a/guides/webide.html
+++ b/guides/webide.html
@@ -29,17 +29,26 @@
 
     <ol>
       <li>Click on the "Web IDE" button<br>
-        <img alt="Use GitLab Web IDE #1" class="image" src="../media/gitlab/guide/webide-1.png"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/gitlab/guide/webide-1.webp" />
+          <img alt="Use GitLab Web IDE #1" src="../media/gitlab/guide/webide-1.png"/>
+        </picture>
       </li>
       <li>Select the files you need to modify and edit them from the browser directly</li>
       <li>When you are done, click on the "Commit" button to enter the "Review" stage<br>
-        <img alt="GitLab Web IDE Workspace" class="image" src="../media/gitlab/guide/webide-2.png"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/gitlab/guide/webide-2.webp" />
+          <img alt="GitLab Web IDE Workspace" src="../media/gitlab/guide/webide-2.png"/>
+        </picture>
       </li>
       <li>In this stage, review all of your changes per file to ensure that they are correct and stage/discard them accordingly<br>
         <i>Alternatively, you can use the "Stage All" button to stage all unstaged files</i>
       </li>
       <li>When you are done reviewing, click the "Commit" button again<br>
-        <img alt="GitLab Web IDE Review Page" class="image" src="../media/gitlab/guide/webide-3.png"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/gitlab/guide/webide-3.webp" />
+          <img alt="GitLab Web IDE Review Page" src="../media/gitlab/guide/webide-3.png"/>
+        </picture>
       </li>
       <li>Enter the commit message for these changes you have done</li>
       <li>Afterwards select the "Create a new branch" option and enter your branch name for this change, checking the "Start a new merge request" button so that GitLab 
@@ -48,7 +57,10 @@
       </li>
       <li>Click the Green "Commit" button for the final time and commit your changes into your branch with the Merge Request!<br>
         <i>For more information on creating a MR head over to <a href="mr.html">Creating a feature and Merge Request</a> for more information</i><br>
-        <img alt="GitLab Web IDE Commit Page" class="image" src="../media/gitlab/guide/webide-4.png"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/gitlab/guide/webide-4.webp" />
+          <img alt="GitLab Web IDE Commit Page" src="../media/gitlab/guide/webide-4.png"/>
+        </picture>
       </li>
     </ol>
     
