--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -31,11 +31,20 @@
 
     <ol>
       <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
-      <img class="image" src="../media/travis-1.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/travis-1.webp" />
+        <img src="../media/travis-1.jpg"/>
+      </picture>
       <li>Click on the link for <i>the build</i> like shown in the picture below</li>
-      <img class="image" src="../media/travis-2.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/travis-2.webp" />
+        <img src="../media/travis-2.jpg"/>
+      </picture>
       <li>You can now view the logs as shown in the picture below</li>
-      <img class="image" src="../media/travis-3.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/travis-3.webp" />
+        <img src="../media/travis-3.jpg"/>
+      </picture>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
