--- a/guides/clone.html
+++ b/guides/clone.html
@@ -31,12 +31,21 @@
     <ol>
       <li>Go to the GitHub Repository and click on <i>Clone or download</i></li>
       <li>Copy the URL by clicking on the button on the right of the URL</li>
-      <img class="image" src="../media/clone-1.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/clone-1.webp" />
+        <img src="../media/clone-1.jpg"/>
+      </picture>
       <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i></li>
-      <img class="image" src="../media/clone-2.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/clone-2.webp" />
+        <img src="../media/clone-2.jpg"/>
+      </picture>
       <li>Paste the URL onto the <i>Source Path/URL</i> field and wait for it to finish loading. Then press <i>Clone</i>
       <br><i>Optionally, define the directory where you want your project files to be located at (yellow arrow)</i></li>
-      <img class="image" src="../media/clone-3.jpg"/>
+      <picture class="image">
+        <source type="image/webp" srcset="../media/clone-3.webp" />
+        <img src="../media/clone-3.jpg"/>
+      </picture>
       <li>Wait for it to finish loading and you are done!</li>
     </ol>
     
