--- a/guides/pipeline.html
+++ b/guides/pipeline.html
@@ -33,13 +33,22 @@
       <li>Go too your MR (or commit) and click the <i>Pipelines</i> Tab</li>
       <li>Click on the icon in the "Status" column<br>
         <i>Alternatively you can click on the Pipeline # hyperlink to go straight into the pipeline</i><br>
-        <img alt="View GitLab CI #1" class="image" src="../media/gitlab/guide/pipeline-1.png"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/gitlab/guide/pipeline-1.webp" />
+          <img alt="View GitLab CI #1" src="../media/gitlab/guide/pipeline-1.png"/>
+        </picture>
       </li>
       <li>Click on the build/test you wish to check the logs on<br>
-        <img alt="View GitLab CI #2" class="image" src="../media/gitlab/guide/pipeline-2.png"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/gitlab/guide/pipeline-2.webp" />
+          <img alt="View GitLab CI #2" src="../media/gitlab/guide/pipeline-2.png"/>
+        </picture>
       </li>
       <li>You can now view the logs as shown in the picture below<br>
-        <img alt="View GitLab CI #3" class="image" src="../media/gitlab/guide/pipeline-3.png"/>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/gitlab/guide/pipeline-3.webp" />
+          <img alt="View GitLab CI #3" src="../media/gitlab/guide/pipeline-3.png"/>
+        </picture>
       </li>
     </ol>
     
